// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionModal disables user from submitting when still connecting 1`] = `
<div
  class="action-modal"
  name="slide-fade"
>
  <div
    class="action-modal-header"
  >
    <img
      class="icon action-modal-atom"
      src="~assets/images/cosmos-logo.png"
    />
    <span
      class="action-modal-title"
    >
      Action Modal
    </span>
     
    <div
      class="action-modal-icon action-modal-close"
      id="closeBtn"
    >
      <i
        class="material-icons"
      >
        close
      </i>
    </div>
  </div>
   
  <div
    class="action-modal-form"
  >
     
    <!---->
     
    <tm-form-group-stub
      class="action-modal-group"
      fieldid="password"
      fieldlabel="Password"
    >
      <tm-field-stub
        id="password"
        placeholder="Password"
        type="password"
      />
       
      <!---->
    </tm-form-group-stub>
  </div>
   
  <div
    class="action-modal-footer"
  >
    <tm-form-group-stub
      class="action-modal-group"
    >
      <div
        class="action-modal-footer"
      >
        <tm-btn-stub
          color="primary"
          disabled="disabled"
          value="Connecting..."
        />
      </div>
    </tm-form-group-stub>
     
    <!---->
  </div>
</div>
`;

exports[`ActionModal has the expected html structure 1`] = `
<div
  class="action-modal"
  name="slide-fade"
>
  <div
    class="action-modal-header"
  >
    <img
      class="icon action-modal-atom"
      src="~assets/images/cosmos-logo.png"
    />
    <span
      class="action-modal-title"
    >
      Action Modal
    </span>
     
    <div
      class="action-modal-icon action-modal-close"
      id="closeBtn"
    >
      <i
        class="material-icons"
      >
        close
      </i>
    </div>
  </div>
   
  <div
    class="action-modal-form"
  >
     
    <!---->
     
    <tm-form-group-stub
      class="action-modal-group"
      fieldid="password"
      fieldlabel="Password"
    >
      <tm-field-stub
        id="password"
        placeholder="Password"
        type="password"
      />
       
      <!---->
    </tm-form-group-stub>
  </div>
   
  <div
    class="action-modal-footer"
  >
    <tm-form-group-stub
      class="action-modal-group"
    >
      <div
        class="action-modal-footer"
      >
        <tm-btn-stub
          color="primary"
          value="Submit"
        />
      </div>
    </tm-form-group-stub>
     
    <!---->
  </div>
</div>
`;

exports[`ActionModal shows sending indication 1`] = `
<div
  class="action-modal"
  name="slide-fade"
>
  <div
    class="action-modal-header"
  >
    <img
      class="icon action-modal-atom"
      src="~assets/images/cosmos-logo.png"
    />
    <span
      class="action-modal-title"
    >
      Action Modal
    </span>
     
    <div
      class="action-modal-icon action-modal-close"
      id="closeBtn"
    >
      <i
        class="material-icons"
      >
        close
      </i>
    </div>
  </div>
   
  <div
    class="action-modal-form"
  >
     
    <!---->
     
    <tm-form-group-stub
      class="action-modal-group"
      fieldid="password"
      fieldlabel="Password"
    >
      <tm-field-stub
        id="password"
        placeholder="Password"
        type="password"
      />
       
      <!---->
    </tm-form-group-stub>
  </div>
   
  <div
    class="action-modal-footer"
  >
    <tm-form-group-stub
      class="action-modal-group"
    >
      <div
        class="action-modal-footer"
      >
        <tm-btn-stub
          color="primary"
          disabled="disabled"
          value="Sending..."
        />
      </div>
    </tm-form-group-stub>
     
    <!---->
  </div>
</div>
`;

exports[`ActionModal shows sending indication 2`] = `
<div
  class="action-modal"
  name="slide-fade"
>
  <div
    class="action-modal-header"
  >
    <img
      class="icon action-modal-atom"
      src="~assets/images/cosmos-logo.png"
    />
    <span
      class="action-modal-title"
    >
      Action Modal
    </span>
     
    <div
      class="action-modal-icon action-modal-close"
      id="closeBtn"
    >
      <i
        class="material-icons"
      >
        close
      </i>
    </div>
  </div>
   
  <div
    class="action-modal-form"
  >
     
    <!---->
     
    <tm-form-group-stub
      class="action-modal-group"
      fieldid="password"
      fieldlabel="Password"
    >
      <tm-field-stub
        id="password"
        placeholder="Password"
        type="password"
      />
       
      <!---->
    </tm-form-group-stub>
  </div>
   
  <div
    class="action-modal-footer"
  >
    <tm-form-group-stub
      class="action-modal-group"
    >
      <div
        class="action-modal-footer"
      >
        <tm-btn-stub
          color="primary"
          value="Submit"
        />
      </div>
    </tm-form-group-stub>
     
    <!---->
  </div>
</div>
`;
